// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker applies styling to \`View\` wrapper 1`] = `
<View
  style={
    Object {
      "backgroundColor": "red",
    }
  }
>
  <RNDateTimePicker
    date={1376949600000}
    mode="date"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "height": 216,
      }
    }
  />
</View>
`;

exports[`DatePicker renders a native Component 1`] = `
<View>
  <RNDateTimePicker
    date={1376949600000}
    mode="date"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "height": 216,
      }
    }
  />
</View>
`;

exports[`DatePicker renders with mode \`datetime\` (iOS only) 1`] = `
<View>
  <RNDateTimePicker
    date={1376949600000}
    mode="datetime"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "height": 216,
      }
    }
  />
</View>
`;

exports[`DatePicker renders with mode \`time\` 1`] = `
<View>
  <RNDateTimePicker
    date={1376949600000}
    mode="time"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "height": 216,
      }
    }
  />
</View>
`;
